import("//build/package.gni")

config("init_config") {
    cflags = ["-static", "-fno-sanitize=address", "-fno-sanitize=undefined", "-static-libsan"]
    ldflags = cflags
}

executable("initd_bin") {
    include_dirs = [ "include" ]

    output_name = "init"
    configs += [ ":init_config" ]

    sources = [ "daemon.c", "main.c" ]
}

resource("initd_rule") {
    sources = [ "multi-user.target", "default.target" ]
    outputs = [ "etc/init.d/targets/{{source_file_part}}" ]
}

resource("initd_docs") {
    sources = [ "init.8" ]
    outputs = [ "usr/share/man/man8/init.8" ]
}

package("init") {
    deps = [
        ":initd_bin",
        ":initd_rule",
        ":initd_docs"
    ]

    is_system_binary = true
    executables = [ "init" ]
}
