import("//build/app.gni")

app_executable("pkgman") {
    package_name = "pkgman"
    output_name = "$package_name"

	include_dirs = [ "include" ]

    deps = [ "//json" ]

    sources = [ "src/main.cpp",
                "src/install.cpp",
                "src/list.cpp",
                "src/query.cpp" ]
}
