import("//build/package.gni")

executable("trace_bin") {
    include_dirs = [ "include" ]

    output_name = "trace"
    deps = ["//lib/symbolize:libsymbolize"]

    sources = [ "trace.c" ]
}

package("trace") {
    deps = [
        ":trace_bin",
    ]

    is_system_binary = true
    executables = [ "trace" ]
}
