import("//build/app.gni")

config("libonyx_config") {
    include_dirs = ["include"]
}

source_set("libonyx_sources") {
    sources = [ "src/process.cpp", "src/handle.cpp" ]
    public_configs = [":libonyx_config"]
}

static_library("libonyx_static") {
    deps = [ ":libonyx_sources" ]
    output_name = "libonyx"
}

app_shared_library("onyx") {
    package_name = "libonyx"
    output_name = "libonyx"
    deps = [ ":libonyx_sources" ]
}

